# engine-opengl

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  log.txt
.cache/clangd/index/: _fixes.hpp.4F35A8C0498BE77A.idx  _vectorize.hpp.6B25290596FCF852.idx  camera.cpp.187D833879F2FF0D.idx  camera.hpp.0DC3CB77BFFC58B8.idx  common.hpp.5FF1114137C48865.idx  compute_common.hpp.2B0B8B3801438F95.idx  compute_vector_decl.hpp.2A78EA887A17C542.idx  compute_vector_relational.hpp.32B168148F87FB89.idx  constants.hpp.67921C4623CED622.idx  constants.inl.CFB9404A990CC5E0.idx  context.c.FF26408FFA651BB9.idx  debugOverlay.hpp.5D623A44648A25FB.idx  dual_quaternion.hpp.FE4DDCA4A3B06748.idx  dual_quaternion.inl.1D0D3AD64417EE2E.idx  egl_context.c.B1DB9BB56030368C.idx  epsilon.hpp.AD82015A27C3DB47.idx  epsilon.inl.223D602EA165FEBA.idx  exponential.hpp.F73AD4B64F466CAC.idx  fractional-scale-v1-client-protocol-code.h.A1A81D7542DE1736.idx  fractional-scale-v1-client-protocol.h.D7080913754348D9.idx  func_common.inl.7710E48C2A852BEF.idx  func_exponential.inl.FD3EFEFB5E4A11FB.idx  func_geometric.inl.BB46D0A389D31F6C.idx  func_integer.inl.CDA4A51D9EB844F5.idx  func_matrix.inl.2E115F29CB9AFD4A.idx  func_packing.inl.D25993D7AD6D4BFC.idx  func_trigonometric.inl.3E4F64831D7BA0E7.idx  func_vector_relational.inl.C79144289995D683.idx  fwd.hpp.7DE9D75F1F320349.idx  game_object.hpp.6185027CF6667176.idx  geometric.hpp.A10056E35D976BDA.idx  glad.c.80D339B6BC54F4FA.idx  glad.h.BDB9A0FBD9A90DDD.idx  glfw3.h.204824CB16E2E7DD.idx  glfw3native.h.9CFC5ED83433B796.idx  glm.cpp.F7F13169AF781BA1.idx  glm.hpp.7231BB5C48836216.idx  glx_context.c.05752C306064FC99.idx  idle-inhibit-unstable-v1-client-protocol-code.h.9B131A4419E362B5.idx  idle-inhibit-unstable-v1-client-protocol.h.8BF9928EE32863A1.idx  (+228 more)
assets/shaders/: f.frag  v.vert
include/Core/: debugOverlay.hpp  engine.hpp  input.hpp  logger.hpp  window.hpp
include/Renderer/: camera.hpp  game_object.hpp  mesh.hpp  renderer.hpp  scene.hpp  shader.hpp
include/core/: window.hpp
src/: main.cpp
src/Core/: debugOverlay.cpp  engine.cpp  input.cpp  logger.cpp  window.cpp
src/Renderer/: camera.cpp  game_object.cpp  mesh.cpp  renderer.cpp  scene.cpp  shader.cpp
src/core/: window.cpp
